# knn_fish

./: README.md  pyproject.toml  training_data.json
src/knn_learn/: data_handler.py  main.py  model.py
